# starthack-Parking

./: CMakeLists.txt  README.md  SBB.cpp  Untitled.ipynb  predictor.cpp  sbb.cpp
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
appdir/: MainActivity.java  Search.java
appdir/androidTest/java/com/example/parking/: ExampleInstrumentedTest.java
appdir/main/: AndroidManifest.xml
appdir/main/res/layout/: activity_main.xml  activity_search.xml  activity_show.xml
appdir/main/res/values/: strings.xml  themes.xml
appdir/main/res/values-night/: themes.xml
data/: data.json  weather.json
include/: json_struct.h
